# paper2patent

./: .gitignore  LICENSE  README.md  README_zh.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/patents/: manifest.json
data/patents/expert_knowledge/: patent_expert_kb.json
examples/sample_input/: README.md
scripts/: analyze_patents.py  build_expert.py  download_all.py  download_patents.py  harvest_patents.py
src/paper2patent/: __init__.py  cli.py  ir.py  pipeline.py
src/paper2patent/analyzer/: paper_analyzer.py
src/paper2patent/converter/: claims_generator.py  expert_mode.py  llm_generator.py  section_mapper.py  terminology.py
src/paper2patent/figures/: annotator.py  extractor.py
src/paper2patent/formatters/: cn_docx.py  default_cn_styles.json  reference_reader.py  styles.py
src/paper2patent/generators/: block_diagram.py  flowchart.py  framework.py
src/paper2patent/parsers/: base.py  latex_parser.py  pdf_parser.py
src/paper2patent/validator/: patent_validator.py
tests/: conftest.py  test_claims_generator.py  test_terminology.py  test_validator.py
