[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper2patent"
version = "0.1.0"
description = "Convert academic papers (LaTeX/PDF) to Chinese invention patent .docx format"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "paper2patent contributors"}
]
keywords = ["patent", "academic-paper", "docx", "latex", "pdf", "CNIPA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]
requires-python = ">=3.10"

dependencies = [
    "python-docx>=1.1.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "PyMuPDF>=1.23.0",
    "pymupdf4llm>=0.0.10",
    "pylatexenc>=2.10",
    "graphviz>=0.20.0",
    "matplotlib>=3.7.0",
    "Pillow>=10.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
ocr = ["paddleocr>=2.7.0", "paddlepaddle"]
docling = ["docling>=2.0.0"]
llm = ["anthropic>=0.30.0", "openai>=1.0.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "ruff>=0.1.0"]

[project.scripts]
paper2patent = "paper2patent.cli:main"

[project.urls]
Repository = "https://github.com/paper2patent/paper2patent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
